[gd_scene load_steps=18 format=3 uid="uid://3mahpp3h1cx4"]

[ext_resource type="Script" path="res://Battle/Box/BattleBox.gd" id="1_htnbd"]
[ext_resource type="Texture2D" uid="uid://c4d1ca57s7ov2" path="res://Battle/Box/box.png" id="2_yeh64"]
[ext_resource type="Theme" uid="uid://s3o3wkvbt3ej" path="res://Text/Fonts/DTMono24.tres" id="3_f5ep8"]
[ext_resource type="Script" path="res://Battle/Box/Blitter.gd" id="4_shawu"]
[ext_resource type="AudioStream" uid="uid://bp5oyjspngmp2" path="res://sfx/Clicks/generic2.wav" id="5_61718"]
[ext_resource type="AudioStream" uid="uid://bh0xfl2mpo5vi" path="res://sfx/button_select.wav" id="7_u3o5n"]
[ext_resource type="AudioStream" uid="uid://c6u3egkne7fdu" path="res://sfx/button_choice.wav" id="8_wdevt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5f7x"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yiolc"]
size = Vector2(580, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p27oi"]
size = Vector2(150, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7nto5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vlgv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1xsol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v40bn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0mu0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2kr3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsvy0"]

[node name="BattleBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htnbd")
TransType = 5

[node name="BoxContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(35, 35)
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 246
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 86
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="BoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s5f7x")

[node name="BoxContainer2" type="MarginContainer" parent="BoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="BoxContainer/BoxContainer2"]
layout_mode = 2
texture = ExtResource("2_yeh64")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Collisions" type="StaticBody2D" parent="BoxContainer"]
collision_mask = 0

[node name="Top" type="CollisionShape2D" parent="BoxContainer/Collisions"]
position = Vector2(318, 250)
rotation = 3.14159
shape = SubResource("RectangleShape2D_yiolc")
debug_color = Color(0.964706, 0.831373, 1, 0.105882)

[node name="Bottom" type="CollisionShape2D" parent="BoxContainer/Collisions"]
position = Vector2(316, 390)
shape = SubResource("RectangleShape2D_yiolc")
debug_color = Color(0.964706, 0.831373, 1, 0.105882)

[node name="Left" type="CollisionShape2D" parent="BoxContainer/Collisions"]
position = Vector2(32, 320)
rotation = 1.5708
shape = SubResource("RectangleShape2D_p27oi")
debug_color = Color(0.964706, 0.831373, 1, 0.105882)

[node name="Right" type="CollisionShape2D" parent="BoxContainer/Collisions"]
position = Vector2(608, 320)
rotation = 4.71239
shape = SubResource("RectangleShape2D_p27oi")
debug_color = Color(0.964706, 0.831373, 1, 0.105882)

[node name="Acts" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 28.0
offset_top = 246.0
offset_right = 612.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="Options" type="SplitContainer" parent="Acts"]
layout_mode = 2
split_offset = 245

[node name="Column1" type="RichTextLabel" parent="Acts/Options"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Check
Shoo
"
scroll_active = false

[node name="Column2" type="RichTextLabel" parent="Acts/Options"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Flex"
scroll_active = false

[node name="Items" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 28.0
offset_top = 246.0
offset_right = 1196.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="Page" type="RichTextLabel" parent="Items"]
custom_minimum_size = Vector2(245, 0)
layout_mode = 2
theme = ExtResource("3_f5ep8")
theme_override_constants/line_separation = 5
bbcode_enabled = true
text = "

							 Page 1"
scroll_active = false

[node name="TabContainer" type="TabContainer" parent="Items"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_7nto5")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_0vlgv")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_1xsol")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_v40bn")
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_0mu0e")
theme_override_styles/panel = SubResource("StyleBoxEmpty_g2kr3")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_lsvy0")
tabs_visible = false

[node name="Page1" type="SplitContainer" parent="Items/TabContainer"]
layout_mode = 2
split_offset = 245

[node name="Column1" type="RichTextLabel" parent="Items/TabContainer/Page1"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Item 1
Item 2"
scroll_active = false

[node name="Column2" type="RichTextLabel" parent="Items/TabContainer/Page1"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Item 3
Item 4"
scroll_active = false

[node name="Page2" type="SplitContainer" parent="Items/TabContainer"]
visible = false
layout_mode = 2
split_offset = 245

[node name="Column1" type="RichTextLabel" parent="Items/TabContainer/Page2"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Item 5
Item 6"
scroll_active = false

[node name="Column2" type="RichTextLabel" parent="Items/TabContainer/Page2"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "[ul bullet=*]Item 7
Item 8"
scroll_active = false

[node name="Target" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 28.0
offset_top = 246.0
offset_right = 612.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="Targets" type="RichTextLabel" parent="Target"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "  * Enemy 1
  * Enemy 2
  * Enemy 3
"
scroll_active = false

[node name="Mercy" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 28.0
offset_top = 246.0
offset_right = 612.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="Choices" type="RichTextLabel" parent="Mercy"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "  * Spare
  * Flee"
scroll_active = false

[node name="Blitter" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 246.0
offset_right = 612.0
offset_bottom = 394.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="Blitter"]
layout_mode = 2
theme = ExtResource("3_f5ep8")
bbcode_enabled = true
text = "* Blitter
  aa"
scroll_active = false
context_menu_enabled = true
visible_characters_behavior = 1
script = ExtResource("4_shawu")
interval = 0.04
queued_texts_handling = 1

[node name="Click" type="AudioStreamPlayer" parent="Blitter/Text"]
stream = ExtResource("5_61718")
volume_db = -4.0
bus = &"SFX"

[node name="Sounds" type="Node" parent="."]

[node name="select" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_u3o5n")
bus = &"SFX"

[node name="choice" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_wdevt")
bus = &"SFX"

[connection signal="finishedalltexts" from="Blitter/Text" to="." method="_debug_finish"]
